--- a/astro/src/pages/[...lang]/datenschutz.astro
+++ b/astro/src/pages/[...lang]/datenschutz.astro
@@ -4,7 +4,7 @@ import { getLocale, localizedUrl, defaultLocale } from "../../lib/i18n";
 
 export async function getStaticPaths() {
   return [
-    { params: { lang: undefined } },
+    { params: { lang: "de" } },
     { params: { lang: "en" } },
     { params: { lang: "kh" } },
   ];
