--- a/astro/src/pages/[...lang]/galerie.astro
+++ b/astro/src/pages/[...lang]/galerie.astro
@@ -5,7 +5,7 @@ import { getGalleryPage, urlFor } from '../../lib/sanity';
 
 export async function getStaticPaths() {
   return [
-    { params: { lang: undefined } },
+    { params: { lang: 'de' } },
     { params: { lang: 'en' } },
     { params: { lang: 'kh' } },
   ];
