--- a/astro/src/pages/[...lang]/history.astro
+++ b/astro/src/pages/[...lang]/history.astro
@@ -10,7 +10,7 @@ import {
 
 export async function getStaticPaths() {
   return [
-    { params: { lang: "de" } },
+    { params: { lang: undefined } },
     { params: { lang: "en" } },
     { params: { lang: "kh" } },
   ];
