--- a/astro/src/pages/[...lang]/index.astro
+++ b/astro/src/pages/[...lang]/index.astro
@@ -19,7 +19,7 @@ import {
 
 export async function getStaticPaths() {
   return [
-    { params: { lang: "de" } },
+    { params: { lang: undefined } },
     { params: { lang: "en" } },
     { params: { lang: "kh" } },
   ];
