--- a/astro/src/components/sections/CambodiaTeaser.astro
+++ b/astro/src/components/sections/CambodiaTeaser.astro
@@ -21,7 +21,7 @@ console.log("[CambodiaTeaser] Using bgImage:", bgImage);
 ---
 
 <section
-    class="teaser-container relative min-h-[60vh] flex items-center overflow-hidden bg-branding-dark py-24 md:py-32"
+    class="teaser-container relative min-h-[60vh] flex items-center overflow-hidden bg-branding-dark py-16 md:py-32"
 >
     <!-- Parallax Background -->
     <div class="absolute inset-0 z-0">
@@ -39,9 +39,9 @@ console.log("[CambodiaTeaser] Using bgImage:", bgImage);
         <!-- <div class="absolute inset-0 bg-gradient-to-t from-branding-dark via-transparent to-branding-dark/60"></div> -->
     </div>
 
-    <div class="container-custom relative z-10 px-4 md:px-8">
+    <div class="container-custom relative z-10 px-0">
         <div
-            class="max-w-4xl mx-auto border-l-[3px] border-secondary/40 pl-8 md:pl-16 reveal"
+            class="max-w-4xl mx-auto border-l-[3px] border-secondary/40 pl-6 md:pl-16 reveal"
         >
             <!-- Content -->
 
