--- a/astro/src/components/sections/CambodiaTeaser.astro
+++ b/astro/src/components/sections/CambodiaTeaser.astro
@@ -39,9 +39,9 @@ console.log("[CambodiaTeaser] Using bgImage:", bgImage);
         <!-- <div class="absolute inset-0 bg-gradient-to-t from-branding-dark via-transparent to-branding-dark/60"></div> -->
     </div>
 
-    <div class="container-custom relative z-10 px-0">
+    <div class="container-custom relative z-10 px-6 md:px-0">
         <div
-            class="max-w-4xl mx-auto border-l-[3px] border-secondary/40 pl-6 md:pl-16 reveal"
+            class="max-w-4xl mx-auto border-l-0 md:border-l-[3px] border-secondary/40 pl-0 md:pl-16 reveal"
         >
             <!-- Content -->
 
