--- a/astro/src/components/sections/Purpose.astro
+++ b/astro/src/components/sections/Purpose.astro
@@ -118,7 +118,7 @@ const quote =
           >
           </div>
 
-          <div class="relative z-10 px-6 md:px-0">
+          <div class="relative z-10 pt-8 md:pt-0">
             <h3 class="text-xl md:text-2xl font-bold text-branding-dark mb-10">
               {
                 t(welcomeData?.greeting, locale) ||
