--- a/astro/src/styles/global.css
+++ b/astro/src/styles/global.css
@@ -80,7 +80,7 @@
 
   /* Section spacing */
   .section {
-    @apply py-16 md:py-32 px-6 md:px-8;
+    @apply py-16 md:py-32 md:px-8;
   }
 
   /* Container */
